# entrenadoria

./: .gitignore  README.md  pyproject.toml  render.yaml
api/: index.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  api.ts  i18n.tsx  styles.css
frontend/src/components/: Layout.tsx
frontend/src/pages/: Clients.tsx  Dashboard.tsx  Form.tsx  Nutrition.tsx  Schedule.tsx  WhatsApp.tsx  Workouts.tsx
src/entrenadoria/: __init__.py  ai.py  api.py  cli.py  demo.py  models.py  store.py  videos.py
